--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta name="description" content="Todo app created for Frontend Mentor" />
-    <meta property="og:image" content="%PUBLIC_URL%/screenshot-todo-app.png" />
+    <meta
+      property="og:image"
+      content="https://annastrin.github.io/frontend-mentor-todo-app/screenshot-todo-app.png"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
